@@ -10,6 +10,8 @@ Release 0.12.1 - unreleased
 
     S2GRAPH-36: Provide Blocking API for Edge/Vertex operations (Committed by DOYUNG YOON).
 
+    S2GRAPH-32: Support variable such as now, day, hour on query (Committed by DOYUNG YOON).
+
   IMPROVEMENT
 
     S2GRAPH-14: Abstract HBase specific methods in Management and Label (Committed by DOYUNG YOON).
